examples/test/testpolicy6988.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6988
  namespace: namespace83
spec:
  podSelector:
    matchLabels:
      key4: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value28
          key22: value15
          key24: value46
      podSelector:
        matchLabels:
          key36: value41
